test/src/e2e_vm_tests/test_programs/should_pass/language/retd_small_array/src/main.sw
script;

fn main() -> [u32; 1] {
    let x: [u32; 1] = [1];
    x
}
