test/src/e2e_vm_tests/test_programs/should_fail/raw_ptr/raw_ptr_ret/src/main.sw
script;

fn main() -> raw_ptr {
    let ptr = asm(r1) { r1: raw_ptr };
    ptr
}
